# projects

./: .gitignore
route_stuff/route-project/: README.md  pyproject.toml
route_stuff/route-project/route-project/results/: log.txt
route_stuff/route-project/route-project/results/pt 1/: InputFrames_{46.01All_GB_Target-GB}_Schd1_W1000_230630-131638.txt  InputFrames_{46.01All_GB_Target-GB}_Schd1_W2000_230630-131638.txt  InputFrames_{46.01All_GB_Target-GB}_Schd1_W5000_230630-131638.txt  InputFrames_{46.01Bus_GB_Target-GB}_Schd1_W1000_230630-131638.txt  InputFrames_{46.01Bus_GB_Target-GB}_Schd1_W100_230630-131638.txt  InputFrames_{46.01Bus_GB_Target-GB}_Schd1_W2000_230630-131638.txt  InputFrames_{46.01Bus_GB_Target-GB}_Schd1_W5000_230630-131638.txt  InputFrames_{46.01Bus_GB_Target-GB}_Schd1_W500_230630-131638.txt  InputFrames_{46.01RailStation_GB_Target-GB}_Schd1_W1000_230630-131638.txt  InputFrames_{46.01RailStation_GB_Target-GB}_Schd1_W100_230630-131638.txt  InputFrames_{46.01RailStation_GB_Target-GB}_Schd1_W2000_230630-131638.txt  InputFrames_{46.01RailStation_GB_Target-GB}_Schd1_W5000_230630-131638.txt  InputFrames_{46.01RailStation_GB_Target-GB}_Schd1_W500_230630-131638.txt  InputFrames_{46.01Roadside_GB_Target-GB}_Schd1_W1000_230630-131638.txt  InputFrames_{46.01Roadside_GB_Target-GB}_Schd1_W100_230630-131638.txt  (+12 more)
route_stuff/route-project/route-project/src/: autonomous-bit-391913-5ed29af63398.json  main.py
route_stuff/route-project/route_project/: main.py
spite/bad-reviews/: README.md  pyproject.toml
spite/bad-reviews/bad-reviews/src/: main.py
(+12 files in other folders)
