[tool.poetry]
name = "route-project"
version = "0.1.0"
description = ""
authors = ["awestcc <awest@cryptocompare.com>"]
readme = "README.md"
packages = [{include = "route_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
